--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
+    "vue3-marquee": "^4.2.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
