start for seo and change page name

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@nuxtjs/i18n": "^9.2.0",
+    "@nuxtjs/sitemap": "^7.5.0",
     "@vueuse/core": "^13.8.0",
     "aos": "^2.3.4",
     "nuxt": "^3.17.3",
     "nuxt-lucide-icons": "^1.0.5",
+    "nuxt-seo-utils": "^7.0.19",
     "swiper": "^11.2.10",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
